RESOLVED FIXED138139
[CSS Shapes] Content does not wrap with overflow: hidden and reference box different from margin-box
https://bugs.webkit.org/show_bug.cgi?id=138139
Summary [CSS Shapes] Content does not wrap with overflow: hidden and reference box di...
Bear Travis
Reported 2014-10-28 11:19:45 PDT
Created attachment 240558 [details] Test case This specific combination of CSS properties causes inline content not to wrap but instead be pushed down below the shaped float. on the float border-radius that causes the border-box to be a circle shape-outside margin-box margin > 1 on the inline content overflow hidden See the attached test case
Attachments
Test case (1.35 KB, text/html)
2014-10-28 11:19 PDT, Bear Travis
no flags
Simplified Testcase (1.31 KB, text/html)
2015-01-06 11:13 PST, Bem Jones-Bey
no flags
Patch (15.63 KB, patch)
2015-01-07 10:39 PST, Bem Jones-Bey
no flags
Bem Jones-Bey
Comment 1 2015-01-06 11:13:58 PST
Created attachment 244077 [details] Simplified Testcase It looks like this doesn't even need a border radius. The key here is that the shape needs to be smaller than the margin box of the float and the paragraph to wrap needs to have overflow: hidden. This simplified testcase version doesn't have a margin or a border, just an inset(1em).
Bem Jones-Bey
Comment 2 2015-01-07 10:39:04 PST
Dave Hyatt
Comment 3 2015-01-07 11:30:58 PST
Comment on attachment 244163 [details] Patch r=me. Vertical writing mode test would be nice though.
Bem Jones-Bey
Comment 4 2015-01-07 11:37:12 PST
(In reply to comment #3) > Comment on attachment 244163 [details] > Patch > > r=me. Vertical writing mode test would be nice though. Thanks. Since this is already in the CQ, I filed Bug 140189 to make sure I add that test.
WebKit Commit Bot
Comment 5 2015-01-07 12:13:08 PST
Comment on attachment 244163 [details] Patch Clearing flags on attachment: 244163 Committed r178045: <http://trac.webkit.org/changeset/178045>
WebKit Commit Bot
Comment 6 2015-01-07 12:13:13 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.